@@ -94,34 +94,46 @@ int cgdb_string_to_int(char *str, int *num) {
     return result;
 }
 
-int cgdb_is_debugger_attached()
+int cgdb_supports_debugger_attach_detection()
 {
 #ifdef HAVE_PROC_SELF_STATUS_FILE
-    int debugger_attached = 0;
-    static const char TracerPid[] = "TracerPid:";
+    return 1;
+#else
+    return 0;
+#endif
+}
 
-    FILE *fp = fopen("/proc/self/status", "r");
-    if ( fp ) {
-        ssize_t chars_read;
-        size_t line_len = 0;
-        char *line = NULL;
+int cgdb_is_debugger_attached()
+{
+    int result;
+    if (cgdb_supports_debugger_attach_detection()) {
+        int debugger_attached = 0;
+        static const char TracerPid[] = "TracerPid:";
 
-        while ((chars_read = getline(&line, &line_len, fp)) != -1) {
-            char *tracer_pid = strstr(line, TracerPid);
+        FILE *fp = fopen("/proc/self/status", "r");
+        if ( fp ) {
+            ssize_t chars_read;
+            size_t line_len = 0;
+            char *line = NULL;
 
-            if (tracer_pid) {
-                debugger_attached = !!atoi(tracer_pid + sizeof(TracerPid) - 1);
-                break;
+            while ((chars_read = getline(&line, &line_len, fp)) != -1) {
+                char *tracer_pid = strstr(line, TracerPid);
+
+                if (tracer_pid) {
+                    debugger_attached = !!atoi(tracer_pid + sizeof(TracerPid) - 1);
+                    break;
+                }
             }
+
+            free(line);
+            fclose(fp);
         }
 
-        free(line);
-        fclose(fp);
+        result = debugger_attached;
+    } else {
+        /* TODO: Implement for other platforms. */
+        result = -1;
     }
 
-    return debugger_attached;
-#else
-    /* TODO: Implement for other platforms. */
-    return -1;
-#endif
+    return result;
 }
